@@ -8,8 +8,8 @@
 <configuremap>
   <configure name="NAME" value="ImageMagick"/>
   <configure name="LIB_VERSION" value="0x660"/>
-  <configure name="LIB_VERSION_NUMBER" value="6,6,0,2"/>
-  <configure name="RELEASE_DATE" value="2010-03-04"/>
+  <configure name="LIB_VERSION_NUMBER" value="6,6,0,3"/>
+  <configure name="RELEASE_DATE" value="2010-03-05"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
   <configure name="EXEC-PREFIX" value="/usr/local"/>
