@@ -1,3 +1,6 @@
+2010-03-05  6.6.0-2 Cristy  <quetzlzacatenango@image...>
+  * add support for the -mip option (maximum intensity projection).
+
 2010-02-27  6.6.0-1 Cristy  <quetzlzacatenango@image...>
   * Check to see if ICON image width /height exceeds that of the image canvas.
   * Set the DPX descriptor to Luma only if the image type is not TrueColor.
